# mod_gmi2html

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  INSTALL.md  Makefile  QUICKSTART.md  README.md  apache-config.conf  example.gmi  gemini_specification.txt
examples/: CUSTOM_HEAD_DOCUMENTATION_INDEX.md  CUSTOM_HEAD_FEATURE.md  CUSTOM_HEAD_IMPLEMENTATION.md  CUSTOM_HEAD_QUICKSTART.md  HEAD_CONFIGURATION_EXAMPLES.md  README.md  dark-mode-stylesheet.css  default-stylesheet.css  head-analytics.html  head-complete.html  head-minimal.html  head-pwa.html  head-seo.html  head-social-media.html
src/: gemini_parser.c  gemini_parser.h  mod_gmi2html.c
